Bug 472576 - Wily Beast and Weakest Creature's (Touhou 17's) icon being assigned to random windows.
Summary: Wily Beast and Weakest Creature's (Touhou 17's) icon being assigned to random...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.27.6
Platform: Arch Linux Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-24 13:35 UTC by Ryan
Modified: 2023-07-25 00:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.7
Sentry Crash Report:


Attachments
That isn't Touhou! (401.53 KB, image/png)
2023-07-24 13:35 UTC, Ryan
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ryan 2023-07-24 13:35:26 UTC
Created attachment 160501 [details]
That isn't Touhou!

SUMMARY
***
So I've noticed this on both my main PC and my Steam Deck, but when Touhou 17 is installed and an application does not have its own icon, it will be assigned Touhou 17's icon instead rather than a generic X.org icon.
***


STEPS TO REPRODUCE
1. Own Touhou 17 via Steam and have it installed.
2. Open a window which does not have its own icon? I can reproduce this reliably by using a Chromium-based web browser to pop out a video in a floating window (see attachment).

OBSERVED RESULT

It's all Touhou

EXPECTED RESULT

Generic X.org icon assigned to windows.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Archlinux
KDE Plasma Version: 5.27.6
KDE Frameworks Version: 5.108.0
Qt Version: 5.15.10

ADDITIONAL INFORMATION

As given away above, this does happen on X11, I will test on Wayland too and see if the behavior is the same. I will edit this bug report (if possible) or add a comment with the results of that.
Comment 1 Fushan Wen 2023-07-24 13:40:14 UTC
Can you run `ls -al ~/.local/share/applications` and post the output here
Comment 2 Ryan 2023-07-24 13:52:28 UTC
Nvidia and Wayland are not on speaking terms right now, so I can't confirm this on Wayland currently.
Comment 3 Ryan 2023-07-24 13:53:35 UTC
(In reply to Fushan Wen from comment #1)
> Can you run `ls -al ~/.local/share/applications` and post the output here

```
total 62
drwxr-xr-x  3 ryan ryan 8192 Jul 11 13:25  .
drwxr-xr-x 70 ryan ryan 3452 Jul 24 09:47  ..
-rwxr-xr-x  1 ryan ryan  175 May 26 20:01 'Borderlands 3.desktop'
-rwxr-xr-x  1 ryan ryan  580 Mar 15 19:28 'cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-0nlqhb8-Database Compare.desktop'
-rwxr-xr-x  1 ryan ryan  616 Mar 15 19:28 'cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-0nlqhb8-Office Language Preferences.desktop'
-rwxr-xr-x  1 ryan ryan  622 Mar 15 19:28 'cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-0nlqhb8-Office Upload Center.desktop'
-rwxr-xr-x  1 ryan ryan  642 Mar 15 19:28 'cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-0nlqhb8-Skype for Business Recording Manager.desktop'
-rwxr-xr-x  1 ryan ryan  585 Mar 15 19:28 'cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-0nlqhb8-Spreadsheet Compare.desktop'
-rwxr-xr-x  1 ryan ryan  666 Mar 15 19:28 'cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-0nlqhb8-Telemetry Dashboard for Office.desktop'
-rwxr-xr-x  1 ryan ryan  687 Mar 15 19:28 'cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-0nlqhb8-Telemetry Log for Office.desktop'
-rwxr-xr-x  1 ryan ryan  548 Mar 15 19:28  cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-3ii0rqp-Access.desktop
-rwxr-xr-x  1 ryan ryan  556 Mar 15 19:28  cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-3ii0rqp-Excel.desktop
-rwxr-xr-x  1 ryan ryan  615 Mar 15 19:28 'cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-3ii0rqp-Microsoft OneDrive.desktop'
-rwxr-xr-x  1 ryan ryan  554 Mar 15 19:28 'cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-3ii0rqp-OneNote 2016.desktop'
-rwxr-xr-x  1 ryan ryan  551 Mar 15 19:28  cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-3ii0rqp-Outlook.desktop
-rwxr-xr-x  1 ryan ryan  574 Mar 15 19:28  cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-3ii0rqp-PowerPoint.desktop
-rwxr-xr-x  1 ryan ryan  558 Mar 15 19:28  cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-3ii0rqp-Publisher.desktop
-rwxr-xr-x  1 ryan ryan  605 Mar 15 19:28 'cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-3ii0rqp-Skype for Business.desktop'
-rwxr-xr-x  1 ryan ryan  567 Mar 15 19:28  cxmenu-cxoffice-f49ef4ef-9b84-4e2f-8ee8-841053c8ed14-3ii0rqp-Word.desktop
-rwxr-xr-x  1 ryan ryan  174 May 20 08:22 'Dead Space.desktop'
-rwxr-xr-x  1 ryan ryan  175 Apr 15 20:26 'Evolution RTS.desktop'
-rwxr-xr-x  1 ryan ryan  175 May  1 16:55 'Factorio Demo.desktop'
-rwxr-xr-x  1 ryan ryan  171 Feb 17 20:47  Frostpunk.desktop
-rw-r--r--  1 ryan ryan  340 Apr  5 21:22  iDrive-Test.desktop
-rwxr-xr-x  1 ryan ryan  170 Apr  5 17:41 'Just Cause 2.desktop'
-rwxr-xr-x  1 ryan ryan  174 Mar 24 15:53 'Just Cause 3.desktop'
-rwxr-xr-x  1 ryan ryan  182 Mar 30 17:08 'Kerbal Space Program.desktop'
-rw-r--r--  1 ryan ryan 1040 Apr 23 07:22  mimeinfo.cache
-rw-r--r--  1 ryan ryan  479 Jul  3 18:33  ModOrganizer-steamtinkerlaunch-dl.desktop-off
-rw-r--r--  1 ryan ryan  486 Jul  3 18:27  ModOrganizer-steamtinkerlaunch-dl.desktop-old
-rwxr-xr-x  1 ryan ryan  174 Apr  5 18:10 'Pathologic 2.desktop'
-rwxr-xr-x  1 ryan ryan  163 Apr 15 20:07 'Quake II RTX.desktop'
-rwxr-xr-x  1 ryan ryan  168 Jun  9 20:33 'RAGE 2.desktop'
-rwxr-xr-x  1 ryan ryan  162 Jun  9 20:33  RAGE.desktop
-rwxr-xr-x  1 ryan ryan  174 Apr  5 18:10 'Rebel Galaxy.desktop'
-rwxr-xr-x  1 ryan ryan  173 May  1 20:39  Retrowave.desktop
-rwxr-xr-x  1 ryan ryan  178 Jul  1 20:23 'SONG OF HORROR.desktop'
-rwxr-xr-x  1 ryan ryan  174 Apr  5 18:43 'Space Colony.desktop'
-rwxr-xr-x  1 ryan ryan  191 Apr 29 15:36 'S.T.A.L.K.E.R. Call of Pripyat.desktop'
-rwxr-xr-x  1 ryan ryan  185 Apr 29 15:36 'S.T.A.L.K.E.R. Clear Sky.desktop'
-rwxr-xr-x  1 ryan ryan  193 Apr 29 15:37 'S.T.A.L.K.E.R. Shadow of Chernobyl.desktop'
-rwxr-xr-x  1 ryan ryan  180 May 29 11:32 'Starpoint Gemini 2.desktop'
-rwxr-xr-x  1 ryan ryan  214 Jul 11 13:25 'Touhou Kikeijuu ~ Wily Beast and Weakest Creature..desktop'
-rw-------  1 ryan ryan 8168 Apr 24 20:35  vivaldi-stable.desktop
-rw-r--r--  1 ryan ryan  517 Jul  3 18:36  vortex-steamtinkerlaunch-dl.desktop
drwxr-xr-x  3 ryan ryan 3452 Jul  3 17:29  wine
-rw-r--r--  1 ryan ryan  202 Apr 23 07:22  wine-extension-chm.desktop
-rw-r--r--  1 ryan ryan  209 Apr 23 07:22  wine-extension-gif.desktop
-rw-r--r--  1 ryan ryan  204 Apr 23 07:22  wine-extension-hlp.desktop
-rw-r--r--  1 ryan ryan  202 Apr 23 07:22  wine-extension-htm.desktop
-rw-r--r--  1 ryan ryan  216 Apr 23 07:22  wine-extension-ini.desktop
-rw-r--r--  1 ryan ryan  212 Apr 23 07:22  wine-extension-jfif.desktop
-rw-r--r--  1 ryan ryan  211 Apr 23 07:22  wine-extension-jpe.desktop
-rw-r--r--  1 ryan ryan  225 Apr 23 07:22  wine-extension-msp.desktop
-rw-r--r--  1 ryan ryan  207 Apr 23 07:22  wine-extension-pdf.desktop
-rw-r--r--  1 ryan ryan  209 Apr 23 07:22  wine-extension-png.desktop
-rw-r--r--  1 ryan ryan  199 Apr 23 07:22  wine-extension-rtf.desktop
-rw-r--r--  1 ryan ryan  194 Apr 23 07:22  wine-extension-txt.desktop
-rw-r--r--  1 ryan ryan  217 Apr 23 07:22  wine-extension-url.desktop
-rw-r--r--  1 ryan ryan  197 Apr 23 07:22  wine-extension-vbs.desktop
-rw-r--r--  1 ryan ryan  205 Apr 23 07:22  wine-extension-wri.desktop
-rw-r--r--  1 ryan ryan  207 Apr 23 07:22  wine-extension-xml.desktop
```
Comment 4 Fushan Wen 2023-07-24 14:01:27 UTC
Can you post the content of 'Touhou Kikeijuu ~ Wily Beast and Weakest Creature..desktop' in that folder?
Comment 5 Ryan 2023-07-24 14:11:19 UTC
(In reply to Fushan Wen from comment #4)
> Can you post the content of 'Touhou Kikeijuu ~ Wily Beast and Weakest
> Creature..desktop' in that folder?

[Desktop Entry]
Name=Touhou Kikeijuu ~ Wily Beast and Weakest Creature.
Comment=Play this game on Steam
Exec=steam steam://rungameid/1079160
Icon=steam_icon_1079160
Terminal=false
Type=Application
Categories=Game;
Comment 6 Bug Janitor Service 2023-07-24 15:48:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3100
Comment 7 Fushan Wen 2023-07-24 23:59:24 UTC
Git commit 506fd06e5d07717bd0b52bdfc5970b181454228f by Fushan Wen.
Committed on 25/07/2023 at 01:43.
Pushed by fusionfuture into branch 'master'.

libtaskmanager: skip empty appId when matching '*.appId.desktop'

When appId is empty, "*..desktop" can be a match. Some games like Touhou
tend to add an extra dot at the end of the desktop name, which causes
Marisa to exist everywhere.
Related: bug 428559
FIXED-IN: 5.27.7

A  +8    -0    libtaskmanager/autotests/data/applications/marisa..desktop
M  +3    -0    libtaskmanager/autotests/tasktoolstest.cpp
M  +1    -1    libtaskmanager/tasktools.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/506fd06e5d07717bd0b52bdfc5970b181454228f
Comment 8 Fushan Wen 2023-07-25 00:19:46 UTC
Git commit 5b59a1334c92d3edaf44b774df3fa608016913e8 by Fushan Wen.
Committed on 25/07/2023 at 02:08.
Pushed by fusionfuture into branch 'Plasma/5.27'.

libtaskmanager: skip empty appId when matching '*.appId.desktop'

When appId is empty, "*..desktop" can be a match. Some games like Touhou
tend to add an extra dot at the end of the desktop name, which causes
Marisa to exist everywhere.
Related: bug 428559
FIXED-IN: 5.27.7


(cherry picked from commit 506fd06e5d07717bd0b52bdfc5970b181454228f)

A  +8    -0    libtaskmanager/autotests/data/applications/marisa..desktop
M  +3    -0    libtaskmanager/autotests/tasktoolstest.cpp
M  +1    -1    libtaskmanager/tasktools.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/5b59a1334c92d3edaf44b774df3fa608016913e8