libtaskmanager: skip empty appId when matching '*.appId.desktop'

When appId is empty, "*..desktop" can be a match. Some games like Touhou
tend to add an extra dot at the end of the desktop name, which causes
Marisa to exist everywhere.

BUG: 472576
BUG: 428559
FIXED-IN: 5.27.7